#1914 Refactored Compilation to be able to accumulate supplied options and accept processor options.